function(ADD_RAKAU_TESTCASE arg1)
  add_executable(${arg1} ${arg1}.cpp)
  target_link_libraries(${arg1} rakau)
  target_compile_options(${arg1} PRIVATE "$<$<CONFIG:DEBUG>:${RAKAU_CXX_FLAGS_DEBUG}>" "$<$<CONFIG:RELEASE>:${RAKAU_CXX_FLAGS_RELEASE}>")
  set_property(TARGET ${arg1} PROPERTY CXX_STANDARD 17)
  set_property(TARGET ${arg1} PROPERTY CXX_STANDARD_REQUIRED YES)
  set_property(TARGET ${arg1} PROPERTY CXX_EXTENSIONS NO)
  add_test(${arg1} ${arg1})
endfunction()

ADD_RAKAU_TESTCASE(accuracy)
ADD_RAKAU_TESTCASE(auto_box_size)
ADD_RAKAU_TESTCASE(update)
ADD_RAKAU_TESTCASE(simd)
ADD_RAKAU_TESTCASE(accel_ordering)
